--- a/templates/index.html
+++ b/templates/index.html
@@ -197,9 +197,9 @@
             <div class="p-4">
               <h5 class="title-img-gallery">Langchain and Pinecone for semantic search </h5>
               <p class="small text-muted mb-0">Use Langchain and Pinecone to feed LLMs from Hugging Face and OpenAI. </p>
-              <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
-                <p>Prompt Engineering</p>
-              </div>
+            </div>
+            <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
+              <p>Prompt Engineering</p>
             </div>
           </div>
         </div>
@@ -213,9 +213,9 @@
             <div class="p-4">
               <h5 class="title-img-gallery">Transport Risk Mitigation with Machine Learning</h5>
               <p class="small text-muted mb-0">EDA and ML models on to Prevent Transportation Risks with IoT data. </p>
-              <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-                <p>Machine Learning</p>
-              </div>
+            </div>
+            <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
+              <p>Machine Learning</p>
             </div>
           </div>
         </div>
@@ -229,9 +229,9 @@
             <div class="p-4">
               <h5 class="title-img-gallery">Vega-Altair, if Plotly and Seaborn had a child</h5>
               <p class="small text-muted mb-0">Interactive Data Visualization using Vega-Altair. </p>
-              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
-                <p>Data Visualization</p>
-              </div>
+            </div>
+            <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
+              <p>Data Visualization</p>
             </div>
           </div>
         </div>
@@ -246,9 +246,9 @@
               <h5 class="title-img-gallery">Dubai Real Estate: Sales Forecasting</h5>
               <p class="small text-muted mb-0">Reporting the steps to predict the sales transaction amounts of Dubai properties.
               </p>
-                <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-                  <p>Machine Learning</p>
-                </div>
+            </div>
+            <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
+              <p>Machine Learning</p>
             </div>
           </div>
         </div>
@@ -263,9 +263,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Build an App to detect butterflies with TensorFlow and Kivy</h5>
                 <p class="small text-muted mb-0">Using CNN to detect 11 different species of southern mediterranean butterflies.</p>
-                <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                    <p>Deep Learning</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
+                <p>Deep Learning</p>
               </div>
             </div>
         </div>
@@ -280,9 +280,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Is this transaction legit? Revolut Fraud Detection</h5>
                 <p class="small text-muted mb-0">Using Machine Learning to detect fraudsters in a Revolut Dataset.</p>
-                <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-                    <p>Machine Learning</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
+                <p>Machine Learning</p>
               </div>
             </div>
           </div>
@@ -297,9 +297,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Web Scraping with Scrapy and Splash</h5>
                 <p class="small text-muted mb-0">Scrapy framework and Splash to scrape Yescapa website.</p>
-                <div class="project-category" style="background-color: rgba(105, 63, 7, 0.856); color: wheat">
-                    <p>Web Scraping</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgba(105, 63, 7, 0.856); color: wheat">
+                <p>Web Scraping</p>
               </div>
             </div>
           </div>
@@ -314,9 +314,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Gather data by creating a survey app with Flask-WTF</h5>
                 <p class="small text-muted mb-0">Flask and Flask-WTF, to build forms. Gather data with a custom form.</p>
-                <div class="project-category" style="background-color: rgba(19, 43, 98, 0.856); color: wheat">
-                    <p>Web Development</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgba(19, 43, 98, 0.856); color: wheat">
+                <p>Web Development</p>
               </div>
             </div>
           </div>
@@ -331,9 +331,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Analysing Global Trades with Dash Plotly and Flask</h5>
                 <p class="small text-muted mb-0">This project aims to analize and visualise global trades using Dash Plotly and Flask.</p>
-                <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat"">
-                    <p>Data Visualization</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat"">
+                <p>Data Visualization</p>
               </div>
             </div>
           </div>
@@ -348,9 +348,9 @@
             <div class="p-4">
               <h5 class="title-img-gallery">Building a dashboard with Dash and Plotly</h5>
               <p class="small text-muted mb-0">Use Dash and Plotly to analyze exoplanets from NASA database. </p>
-              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
-                <p>Data Visualization</p>
-              </div>
+            </div>
+            <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
+              <p>Data Visualization</p>
             </div>
           </div>
         </div>
@@ -365,9 +365,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Extract attachments from email with Python</h5>
                 <p class="small text-muted mb-0">Use pywin 32 python library to interact with Outlook.</p>
-                <div class="project-category" style="background-color: rgb(78, 81, 79); color: wheat">
-                    <p>Automation</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgb(78, 81, 79); color: wheat">
+                <p>Automation</p>
               </div>
             </div>
         </div>
@@ -383,9 +383,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">Using NLP on Job Descriptions with a NER Model</h5>
                 <p class="small text-muted mb-0">NER model developed with Spacy to detect key words in job descriptions. </p>
-                <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                    <p>Deep Learning</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
+                <p>Deep Learning</p>
               </div>
             </div>
         </div>
@@ -400,9 +400,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">GUI to be used as a repository for plants and mushrooms</h5>
                 <p class="small text-muted mb-0">Look for species, families and properties of muchrooms and plants.</p>
-                <div class="project-category" style="background-color: rgb(236, 173, 47); color: rgb(0, 0, 0)">
-                    <p>GUI Development</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgb(236, 173, 47); color: rgb(0, 0, 0)">
+                <p>GUI Development</p>
               </div>
             </div>
         </div>
@@ -417,9 +417,9 @@
               <div class="p-4">
                 <h5 class="title-img-gallery">BTC, ETH, STEEM and HIVE data analysis using Python</h5>
                 <p class="small text-muted mb-0">Crypto Market study of BTC, ETH, STEEM and HIVE, from 2020 to 2021.</p>
-                <div class="project-category" style="background-color: rgb(197, 207, 0); color: rgb(0, 0, 0)">
-                    <p>Data Analysis</p>
-                </div>
+              </div>
+              <div class="project-category" style="background-color: rgb(197, 207, 0); color: rgb(0, 0, 0)">
+                <p>Data Analysis</p>
               </div>
             </div>
         </div>
@@ -443,9 +443,9 @@
           <div class="p-4">
             <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Won the second place 🥈 in the Transport Risk Mitigation challenge</h5>
             <p class="small text-muted mb-0" style="color: #6e8923 !important;;">EDA and ML models on to Prevent Transportation Risks with IoT data. </p>
-            <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
-              <p>Reporting</p>
-            </div>
+          </div>
+          <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
+            <p>Reporting</p>
           </div>
         </div>
       </div>
@@ -457,13 +457,13 @@
             <img src="static/images/work/challenge_real_estate.webp" target="_blank" alt="" class="img-fluid card-img-top">
           </a>
           <div class="p-4">
-            <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Won the third place 🥉 in the Dubai Real Estate Sales Forecasting challenge</h5>
+            <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Third place 🥉 in the Dubai Real Estate Sales Forecasting challenge</h5>
             <p class="small text-muted mb-0" style="color: #6e8923 !important;;">Reporting the steps to predict the sales transaction amounts of Dubai
               properties.
             </p>
-            <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
-              <p>Reporting</p>
-            </div>
+          </div>
+          <div class="project-category" style="background-color: rgb(62, 75, 116); color: wheat">
+            <p>Reporting</p>
           </div>
         </div>
       </div>
@@ -480,9 +480,9 @@
           <div class="p-4">
             <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Geo-targeting with Proxies: Extracting Location-Based Data using the Scraping Browser</h5>
             <p class="small text-muted mb-0" style="color: #6e8923 !important;;">Technical writing about geo-targeting with Bright Data Scraping Browser </p>
-            <div class="project-category" style="background-color: rgb(145, 87, 15); color: wheat">
-              <p>Technical Writing</p>
-            </div>
+          </div>
+          <div class="project-category" style="background-color: rgb(145, 87, 15); color: wheat">
+            <p>Technical Writing</p>
           </div>
         </div>
       </div>
@@ -497,9 +497,9 @@
           <div class="p-4">
             <h5 class="title-img-gallery" style="color: rgb(218, 218, 218);">Scraping for eCommerce: Extracting Product Data for Competitive Insights</h5>
             <p class="small text-muted mb-0" style="color: #6e8923 !important;;">Technical writing about web scraping ecommerce products with Bright Data</p>
-            <div class="project-category" style="background-color: rgb(145, 87, 15); color: wheat">
-              <p>Technical Writing</p>
-            </div>
+          </div>
+          <div class="project-category" style="background-color: rgb(145, 87, 15); color: wheat">
+            <p>Technical Writing</p>
           </div>
         </div>
       </div>
@@ -515,9 +515,9 @@
           <div class="p-4">
             <h5 class="title-img-gallery"style="color: rgb(218, 218, 218);">Data Analysis and data manipulation tasks on Upwork</h5>
             <p class="small text-muted mb-0" style="color: #6e8923 !important;">I'm always trying to enroll in more and more tasks on Upwork, such as Data Science, Technical writing and ML.</p>
-            <div class="project-category" style="background-color: #6fda44; color: rgb(0, 0, 0)">
-              <p>Upwork</p>
-            </div>
+          </div>
+          <div class="project-category" style="background-color: #6fda44; color: rgb(0, 0, 0)">
+            <p>Upwork</p>
           </div>
         </div>
       </div>
