--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,6 @@
     <div class="collapse navbar-collapse navbar-default" id="navbarTogglerDemo02" style="visibility:inherit">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a href="#skills" class="nav-link">Skills</a>
-            </li>
-            <li class="nav-item">
                 <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
@@ -97,11 +94,6 @@
             <p class="p-img-icon">
               <a href="https://github.com/macrodrigues" target="_blank">
                 <img alt="github" target="_blank" width="40px" src="static/images/icons/github.svg" class="img-icon" />
-              </a>
-            </p>
-            <p class="p-img-icon">
-              <a href="https://unsplash.com/@macrodrigues" target="_blank">
-                <img alt="unsplash" target="_blank" width="40px" src="static/images/icons/unsplash.svg" class="img-icon" />
               </a>
             </p>
           </div>
@@ -529,10 +521,10 @@
         <h3 class="subtitle" style="color: white !important;">Companies I've worked for</h3>
         <div class="icon-about-align">
           <p class="p-img-icon">
-            <img alt="cnes" width="110px" src="static/images/jobs/cnes.webp" class="lang-img-icon" />
+            <img alt="cnes" width="110px" src="static/images/jobs/cnes.webp" class="lang-img-icon" style="margin-top: 1%"/>
           </p>
           <p class="p-img-icon">
-            <img alt="teledyne" width="200px" src="static/images/jobs/teledyne.webp" class="lang-img-icon"
+            <img alt="teledyne" width="200px" src="static/images/jobs/teledyne.webp" class="lang-img-icon" style="margin-top: 1%"
               style="padding-bottom: 12%;" />
           </p>
         </div>
