changes in design

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -90,7 +90,7 @@
 
 /* About */
 .bg-image {
-    background-image: url(../images/test_cover.png);
+    background-image: url(../images/website_cover.webp);
     background-position: 0px -56%;
     background-size: cover;
     /* margin-top: 25px; */
