--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
                 <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="#work" class="nav-link">Work</a>
+                <a href="https://www.medium.com/@macrodrigues" target="_blank" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-                <a href="https://www.medium.com/@macrodrigues" target="_blank" class="nav-link">Blog</a>
+              <a href="https://mirror.xyz/macrodrigues.eth" class="nav-link">Web3</a>
             </li>
             <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
@@ -214,19 +214,37 @@
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a href="https://medium.com/@macrodrigues/vega-altair-if-plotly-and-seaborn-had-a-child-5e89f5984ee7">
-              <img src="static/images/projects/vega_altair.webp" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Vega-Altair, if Plotly and Seaborn had a child</h5>
-              <p class="small text-muted mb-0">Interactive Data Visualization using Vega-Altair. </p>
-            </div>
-            <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
-              <p>Data Visualization</p>
+            <div class="bg-white rounded shadow-sm">
+                <a href="https://medium.com/@macrodrigues/global-trades-visualization-using-dash-plotly-and-flask-b528fcab1e5e">
+                  <img src="static/images/projects/global_trades.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
+              <div class="p-4">
+                <h5 class="title-img-gallery">Analysing Global Trades with Dash Plotly and Flask</h5>
+                <p class="small text-muted mb-0">This project aims to analize and visualise global trades using Dash Plotly and Flask.</p>
+              </div>
+              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat"">
+                <p>Data Visualization</p>
+              </div>
             </div>
           </div>
+          <!-- End -->
+
+        <!-- Gallery item -->
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+                <a href="https://medium.com/@macrodrigues/build-an-app-to-detect-butterflies-with-tensorflow-and-kivy-772c6fd362b4">
+                  <img src="static/images/projects/butterflies_detector.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                </a>
+              <div class="p-4">
+                <h5 class="title-img-gallery">Build an App to detect butterflies with TensorFlow and Kivy</h5>
+                <p class="small text-muted mb-0">Using CNN to detect 11 different species of southern mediterranean butterflies.</p>
+              </div>
+              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
+                <p>Deep Learning</p>
+              </div>
+            </div>
         </div>
+        <!-- End -->
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
@@ -249,57 +267,6 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/build-an-app-to-detect-butterflies-with-tensorflow-and-kivy-772c6fd362b4">
-                  <img src="static/images/projects/butterflies_detector.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Build an App to detect butterflies with TensorFlow and Kivy</h5>
-                <p class="small text-muted mb-0">Using CNN to detect 11 different species of southern mediterranean butterflies.</p>
-              </div>
-              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                <p>Deep Learning</p>
-              </div>
-            </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/is-this-transaction-legit-revolut-fraud-detection-facddbc0fc80">
-                  <img src="static/images/projects/fraud_detection_revolut.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Is this transaction legit? Revolut Fraud Detection</h5>
-                <p class="small text-muted mb-0">Using Machine Learning to detect fraudsters in a Revolut Dataset.</p>
-              </div>
-              <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-                <p>Machine Learning</p>
-              </div>
-            </div>
-          </div>
-          <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/web-scraping-with-scrapy-and-splash-3d5666ba78ff">
-                  <img src="static/images/projects/scrapy_vans.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Web Scraping with Scrapy and Splash</h5>
-                <p class="small text-muted mb-0">Scrapy framework and Splash to scrape Yescapa website.</p>
-              </div>
-              <div class="project-category" style="background-color: rgba(105, 63, 7, 0.856); color: wheat">
-                <p>Web Scraping</p>
-              </div>
-            </div>
-          </div>
-          <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
                 <a href="https://medium.com/@macrodrigues/gather-data-by-creating-a-survey-app-with-flask-wtf-feb0053f7a74">
                   <img src="static/images/projects/flask_forms.webp" target="_blank" alt="" class="img-fluid card-img-top">
                 </a>
@@ -313,75 +280,6 @@
             </div>
           </div>
           <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://medium.com/@macrodrigues/global-trades-visualization-using-dash-plotly-and-flask-b528fcab1e5e">
-                  <img src="static/images/projects/global_trades.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Analysing Global Trades with Dash Plotly and Flask</h5>
-                <p class="small text-muted mb-0">This project aims to analize and visualise global trades using Dash Plotly and Flask.</p>
-              </div>
-              <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat"">
-                <p>Data Visualization</p>
-              </div>
-            </div>
-          </div>
-          <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-              <a href="https://peakd.com/hive-163521/@macrodrigues/building-a-dashboard-with-dash-and-plotly">
-                <img src="static/images/projects/nasa_exoplanets.webp" target="_blank" alt="" class="img-fluid card-img-top">
-              </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Building a dashboard with Dash and Plotly</h5>
-              <p class="small text-muted mb-0">Use Dash and Plotly to analyze exoplanets from NASA database. </p>
-            </div>
-            <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
-              <p>Data Visualization</p>
-            </div>
-          </div>
-        </div>
-        <!-- End -->
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://peakd.com/hive-169321/@macrodrigues/extract-attachments-from-email-with-python">
-                  <img src="static/images/projects/extract_from_outlook.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Extract attachments from email with Python</h5>
-                <p class="small text-muted mb-0">Use pywin 32 python library to interact with Outlook.</p>
-              </div>
-              <div class="project-category" style="background-color: rgb(78, 81, 79); color: wheat">
-                <p>Automation</p>
-              </div>
-            </div>
-        </div>
-        <!-- End -->
-
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-            <div class="bg-white rounded shadow-sm">
-                <a href="https://peakd.com/hive-163521/@macrodrigues/using-nlp-on-job-descriptions">
-                  <img src="static/images/projects/skills_matcher.webp" target="_blank" alt="" class="img-fluid card-img-top">
-                </a>
-              <div class="p-4">
-                <h5 class="title-img-gallery">Using NLP on Job Descriptions with a NER Model</h5>
-                <p class="small text-muted mb-0">NER model developed with Spacy to detect key words in job descriptions. </p>
-              </div>
-              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
-                <p>Deep Learning</p>
-              </div>
-            </div>
-        </div>
-        <!-- End -->
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
@@ -403,20 +301,35 @@
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
-                <a href="https://peakd.com/hive-169321/@macrodrigues/btc-eth-steem-and-hive-analysis-using-python-from-2020-to-2021">
-                  <img src="static/images/projects/crypto_analysis.webp" target="_blank" alt="" class="img-fluid card-img-top">
+                <a href="https://peakd.com/hive-163521/@macrodrigues/using-nlp-on-job-descriptions">
+                  <img src="static/images/projects/skills_matcher.webp" target="_blank" alt="" class="img-fluid card-img-top">
                 </a>
               <div class="p-4">
-                <h5 class="title-img-gallery">BTC, ETH, STEEM and HIVE data analysis using Python</h5>
-                <p class="small text-muted mb-0">Crypto Market study of BTC, ETH, STEEM and HIVE, from 2020 to 2021.</p>
+                <h5 class="title-img-gallery">Using NLP on Job Descriptions with a NER Model</h5>
+                <p class="small text-muted mb-0">NER model developed with Spacy to detect key words in job descriptions. </p>
               </div>
-              <div class="project-category" style="background-color: rgb(197, 207, 0); color: rgb(0, 0, 0)">
-                <p>Data Analysis</p>
+              <div class="project-category" style="background-color: rgb(0, 141, 207); color: wheat">
+                <p>Deep Learning</p>
               </div>
             </div>
         </div>
         <!-- End -->
-</div>
+      </div>
+      <div class="go-to-blogs">
+        <div class="blog-label">
+          <a href="https://medium.com/@macrodrigues" class="blog-label-link">
+            <p>More Projects</p>
+          </a>
+        </div>
+        <div class="blog-label">
+          <a href="https://mirror.xyz/macrodrigues.eth" class="blog-label-link">
+            <p>Web3 Projects</p>
+          </a>
+        </div>
+      </div>
+<div>
+
+
 
 <!--Paid Work Section-->
 <div id="work" style="background-color: #121409;">
