add presearch advertising

--- a/templates/index.html
+++ b/templates/index.html
@@ -169,6 +169,12 @@
                 </div>
             </div>
         </div>
+        <!--preseach add-->
+        <div style="margin: auto; display:flex; justify-content: center;">
+          <a href="https://presearch.com/signup?rid=4739267" target="_blank">
+            <img src="https://assets.presearch.com/referral/ban-5.jpg" title="Presearch" alt="presearch" />
+          </a>
+        </div>
     </div>
 </div>
 <!--Projects Section-->
@@ -317,12 +323,12 @@
       </div>
       <div class="go-to-blogs">
         <div class="blog-label">
-          <a href="https://medium.com/@macrodrigues" class="blog-label-link">
+          <a href="https://medium.com/@macrodrigues" class="blog-label-link" target="_blank">
             <p>More Projects</p>
           </a>
         </div>
         <div class="blog-label">
-          <a href="https://mirror.xyz/macrodrigues.eth" class="blog-label-link">
+          <a href="https://mirror.xyz/macrodrigues.eth" class="blog-label-link" target="_blank">
             <p>Web3 Projects</p>
           </a>
         </div>
