--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <a href="https://www.medium.com/@macrodrigues" target="_blank" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="https://mirror.xyz/macrodrigues.eth" class="nav-link">Web3</a>
+              <a href="https://mirror.xyz/macrodrigues.eth" target="_blank" class="nav-link">Web3</a>
             </li>
             <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
@@ -323,14 +323,18 @@
       </div>
       <div class="go-to-blogs">
         <div class="blog-label">
-          <a href="https://medium.com/@macrodrigues" class="blog-label-link" target="_blank">
-            <p>More Projects</p>
-          </a>
+          <button class="btn btn-secondary btn-sm">
+            <a href="https://medium.com/@macrodrigues" class="blog-label-link" target="_blank">
+              <p>More Projects</p>
+            </a>
+          </button>
         </div>
         <div class="blog-label">
-          <a href="https://mirror.xyz/macrodrigues.eth" class="blog-label-link" target="_blank">
-            <p>Web3 Projects</p>
-          </a>
+          <button class="btn btn-secondary btn-sm">
+            <a href="https://mirror.xyz/macrodrigues.eth" class="blog-label-link" target="_blank">
+              <p>Web3 Projects</p>
+            </a>
+          </button>
         </div>
       </div>
 <div>
