--- a/templates/index.html
+++ b/templates/index.html
@@ -88,12 +88,17 @@
             </p>
             <p class="p-img-icon">
               <a href="https://medium.com/@macrodrigues" target="_blank">
-                <img alt="linkedin" target="_blank" width="60px" src="static/images/icons/medium.svg" class="img-icon" />
+                <img alt="medium" target="_blank" width="60px" src="static/images/icons/medium.svg" class="img-icon" />
               </a>
             </p>
             <p class="p-img-icon">
               <a href="https://github.com/macrodrigues" target="_blank">
                 <img alt="github" target="_blank" width="40px" src="static/images/icons/github.svg" class="img-icon" />
+              </a>
+            </p>
+            <p class="p-img-icon">
+              <a href="https://twitter.com/marcoacavaco" target="_blank">
+                <img alt="github" target="_blank" width="40px" src="static/images/icons/x_logo.svg" class="img-icon" />
               </a>
             </p>
           </div>
