--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marco Rodrigues</title>
+    <meta name="author" property="og:author"content="Marco Rodrigues">
+    <meta property="og:image" content="static/images/profile-pic.webp"/>
+    <meta name="keywords" content="Data Science, AI, Web3">
+    <meta name="description" property="og:description" content="Discover a cutting-edge Data Science, AI, and Web3 portfolio curated by Marco. A versatile freelancer proficient in various IT skills, spanning from coding to technical writing. Reach out to discover the full spectrum of services and more.">
+    <title>Marco Rodrigues | Data Science, AI & Web3</title>
     <link rel = "icon" href = "static/images/profile-pic.webp" type = "image/x-icon" style="border-radius: 50%;">
 </head>
 <body>
