--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,13 @@
                 <img alt="github" target="_blank" width="40px" src="static/images/icons/x_logo.svg" class="img-icon" />
               </a>
             </p>
+            <p class="p-img-icon">
+            <p class="p-img-icon" style="padding: 0; margin-bottom: 2.5%; margin-left: -3%;">
+              <a target="_blank" href="https://www.zaask.pt/user/marcoacrodrigues" >
+                <img src="https://www.zaask.pt/widget?user=793189&widget=pro-since" alt="" style="width: 45px;"/>
+              </a>
+            </p>
+            </p>
           </div>
         </div>
       </div>
